--- a/src/render/login/unlocked/updateData/updateData.html
+++ b/src/render/login/unlocked/updateData/updateData.html
@@ -23,7 +23,7 @@
                                     <td>EDITANDO INFORMACIÓN</td>
                                 </thead>
                                 <tr>
-                                    <td class="labelUpdate">ID PRODUCTO</td>
+                                    <td class="labelUpdate">CÓDIGO DEL PRODUCTO</td>
                                     <td class="inputUpdate"><input id="idProduct" type="text" disabled></td>
                                 </tr>
                                 <tr>
